--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,24 +45,6 @@ jobs:
     - name: Download dependencies
       run: go mod download
     
-    - name: Create .env file
-      run: |
-        cat > .env << EOF
-        CMC_API_KEY=${{ secrets.CMC_API_KEY }}
-        BULLION_API_KEY=${{ secrets.BULLION_API_KEY }}
-        BULLION_API_URL=${{ secrets.BULLION_API_URL }}
-        TRADING212_API_KEY=${{ secrets.TRADING212_API_KEY }}
-        TRADING212_IS_LIVE=${{ secrets.TRADING212_IS_LIVE }}
-        TELEGRAM_BOT_TOKEN=${{ secrets.TELEGRAM_BOT_TOKEN }}
-        TELEGRAM_CHAT_ID=${{ secrets.TELEGRAM_CHAT_ID }}
-        SMTP_HOST=${{ secrets.SMTP_HOST }}
-        SMTP_PORT=${{ secrets.SMTP_PORT }}
-        SMTP_USERNAME=${{ secrets.SMTP_USERNAME }}
-        SMTP_PASSWORD=${{ secrets.SMTP_PASSWORD }}
-        EMAIL_FROM=${{ secrets.EMAIL_FROM }}
-        EMAIL_TO=${{ secrets.EMAIL_TO }}
-        EOF
-
     - name: Build application
       run: go build -o investment-tracker .
     
@@ -83,6 +65,10 @@ jobs:
         EMAIL_TO: ${{ secrets.EMAIL_TO }}
       run: |
         echo "🚀 Starting daily portfolio tracking..."
+        echo "Environment variables check:"
+        echo "- CMC_API_KEY: ${CMC_API_KEY:0:10}..." 
+        echo "- TRADING212_API_KEY: ${TRADING212_API_KEY:0:10}..."
+        echo "- TELEGRAM_BOT_TOKEN: ${TELEGRAM_BOT_TOKEN:0:10}..."
         echo "Sending current portfolio notification..."
         go run cmd/notify.go now
         echo "Investment tracker completed successfully"
